--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -90,7 +90,7 @@
 
     .footer-number{
         font-weight: 600;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 1.2px;
         display: table-cell;
         vertical-align: middle
@@ -106,13 +106,17 @@
     }
 
     .footer-logo-link{
-        margin: -65px;                         
+        margin: -67px;                         
         transform: translate(0, -20%);
     }
 
     .footer-icon-tel{
-        width: 20px; 
-        height: 20px;
+        width: 24px; 
+        height: 23px;
+    }
+
+    .footer-img{
+        margin-right: 20px;
     }
 }
 
