--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -64,21 +64,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     text-align: center;
     letter-spacing: 0.03em;
     padding-top: 50px;
-
-    @media screen and (min-width: 768px){
-        font-size: 26px;
-        line-height: 1.307;
-        width: 688px;
-        margin: auto;
-    }
-
-    @media screen and (min-width: 1680px){
-        font-weight: 800;
-        font-size: 46px;
-        line-height: 130%;
-        padding-top: 100px;
-        width: 1090px;
-    }
 }
 
 .form-text{
@@ -90,22 +75,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     text-align: center;
     letter-spacing: 0.08em;
     margin-top: 30px;
-
-    @media screen and (min-width: 768px){
-        font-size: 14px;
-        line-height: 1.214;
-        width: 452px;
-        margin: 30px auto 40px;
-    }
-
-    @media screen and (min-width: 1680px){
-        font-size: 30px;
-        line-height: 1.233;
-        width: 1090px;
-        height: 74px;
-        margin-top: 50px;
-        margin-bottom: 56px;
-    }
 }
 
 .form-word-accent{
@@ -118,7 +87,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 
 .form-input{
     height: 48px;
-    width: 100%;
+    width: 280px;
     background: rgba(255, 255, 255, 1);
     background: rgba( 0,0,0, 0.1);
     border: 2px solid rgba(255, 255, 255, 1);
@@ -130,22 +99,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     line-height: 1.214;
     letter-spacing: 0.08em;
     color: rgba(255, 255, 255, 1);
-
-    @media screen and (min-width: 768px) {
-        width: 390px;
-        height: 48px;
-        margin-left: 168px;
-    }
-
-    @media screen and (min-width: 1680px){
-        width: 478px;
-        height: 70px;
-        margin-left: 418px;
-        font-size: 20px;
-        line-height: 1.2;
-    }
-    
-
 }
 
 .form-label:not(:last-child){
@@ -160,7 +113,9 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
 .form-button{
     height: 48px;
     width: 260px;
-    margin: 50px 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: 10px;
     padding: 0;
     font-style: normal;
     font-weight: bold;
@@ -171,19 +126,7 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     letter-spacing: 0.08em;
     color: rgb(255, 255, 255);
     background-color: var(--accent-color);
-    border: none;
-
-    @media screen and (min-width: 768px) {
-        margin: 31px 254px 71px  254px;
-    }
-
-    @media screen and (min-width: 1680px){
-        font-size: 14px;
-        line-height: 1.214px;
-        width: 354px;
-        height: 70px;
-        margin: 80px 481px 62px 481px; 
-    }
+    border: none; 
 }
 
 .form-button:hover,
@@ -193,9 +136,74 @@ screen and (min-resolution: 2dppx) and (min-width: 1200px){
     color: var(--accent-color);
 }
 
-@media screen and (min-width: 1680px){
-   .form-container{ 
-    padding: 0px;
-   }
+@media screen and (min-width: 768px){
+    .form-title{
+        font-size: 26px;
+        line-height: 1.307;
+        width: 688px;
+        margin: auto;       
 }
 
+    .form-text{
+        font-size: 14px;
+        line-height: 1.214;
+        width: 452px;
+        margin: 30px auto 40px;
+    }
+
+    .forms{
+        width: 390px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form-button{
+        margin-left: 234px;
+    }
+
+    .form-input{
+        width: 390px;
+        height: 48px;
+    }
+
+}
+
+
+@media screen and (min-width: 1680px){
+    .form-title{
+        font-weight: 800;
+        font-size: 46px;
+        line-height: 130%;
+        padding-top: 100px;
+        width: 1090px;
+ }
+    .form-text{
+        font-size: 30px;
+        line-height: 1.233;
+        width: 1090px;
+        height: 74px;
+        margin-top: 50px;
+        margin-bottom: 56px;
+    }
+
+    .form-input{
+        width: 478px;
+        height: 70px;
+        font-size: 20px;
+        line-height: 1.2;   
+    }
+
+    .forms{
+        width: 478px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .form-button{
+        font-size: 14px;
+        line-height: 1.214px;
+        width: 354px;
+        height: 70px;
+        margin: 80px 451px 62px ;
+    }
+ }
