--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -2,6 +2,6 @@
   font-family: Montserrat;
   font-size: 20px;
   line-height: 1.4;
-  max-width: 1688px;
   color: var(--title-text-color);
-  background-color: var(--primary-background-color);}
+  background-color: var(--primary-background-color);
+}
