Готовы обе секции под моб и планшет

--- a/src/partials/main_problems.html
+++ b/src/partials/main_problems.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="main_problems__black">
             <h2 class="main_problems__title">
-                Главные проблемы учеников на English ВНО, которые мы <span class="main_problems__title-orange">помогаем</span> решить</h2>
+                Главные проблемы учеников <br> на English ВНО, которые <br> мы <span class="main_problems__title-orange">помогаем</span> решить</h2>
             <div class="main_problems__img">
                 <img src="images/main_problems/fire_under_hero.png" alt="fire_under_hero" / width="300px">
             </div>
@@ -26,7 +26,7 @@
                     </li>
                     <li class="main_problems__item">
                         <div class="main_problems__item-number"> 04</div>
-                        <span class="main_problems__item-desc">Подготовка в одиночку</span>
+                        <span class="main_problems__item-desc">Подготовка в <br> одиночку</span>
                     </li>
                     <li class="main_problems__item">
                         <div class="main_problems__item-number">05</div>
