--- a/src/sass/layout/_main_problems.scss
+++ b/src/sass/layout/_main_problems.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 320px) {
   .main_problems {
     width: 100%;
-    height: 693px;
+    margin-bottom: 120px;
     background-color: var(--black-color);
   }
 
@@ -33,10 +33,10 @@
   .main_problems__list {
     display: block;
     position: absolute;
+    top: 33%;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 27px;
-    // margin-bottom: 50px;
     width: 280px;
     list-style: none;
     background-color: var(--white-color);
@@ -48,7 +48,7 @@
     }
     li {
       padding-top: 15px;
-      line-height: 30px;
+      // line-height: 30px;
     }
 
     .main_problems__item-desc {
@@ -57,6 +57,10 @@
       line-height: 1.43;
       letter-spacing: 0.08em;
       color: var(--black-color);
+    }
+
+    .main_problems__item:last-child {
+      margin-bottom: 20px;
     }
 
     .main_problems__item-number {
@@ -90,14 +94,36 @@
 
 @media screen and (min-width: 768px) {
   .main_problems {
-    height: 491.5px;
+    width: 100%;
+    margin-bottom: 145px;
+    background-color: var(--black-color);
   }
+
+  .main_problems__black {
+    position: relative;
+    height: 340px;
+  }
+
   .main_problems__title {
-    width: 400px;
+    padding-top: 59.5px;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    color: var(--white-color);
   }
   .main_problems__list {
-    width: 680px;
-    height: 380px;
+    width: 688px;
+    height: 303px;
+    display: block;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 25px;
+    list-style: none;
+    background-color: var(--white-color);
+    box-shadow: -5px 8px 26px rgb(0 0 0 / 4%);
   }
   .main_problems__list ul {
     display: flex;
@@ -108,28 +134,30 @@
   .main_problems__list li {
     padding-right: 0;
     padding-top: 0;
+    line-height: 20px;
+    margin-bottom: 24px;
   }
   .main_problems__item {
     padding-left: 50px;
     padding-bottom: 10px;
+
     &:nth-child(2n) {
       padding-left: 100px;
     }
     &:nth-child(4) {
-      padding-left: 80px;
+      padding-left: 76px;
     }
     &:nth-child(6) {
-      padding-left: 130px;
+      padding-left: 120px;
     }
   }
 }
 
 @media screen and (min-width: 1344px) {
   .main_problems {
-    position: relative;
-    height: 710px;
-    // margin-top: 130px;
-    margin-bottom: 130px;
+    width: 100%;
+    margin-bottom: 120px;
+    background-color: var(--black-color);
   }
 
   .main_problems__black {
