--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 
-<section class="gallery">
-    <div class="container carousel slide" id="carouselExampleCaptions" data-ride="carousel">
+<section class="container">
+    <div class="gallery carousel slide" id="carouselExampleCaptions" data-ride="carousel">
         <ul class="gallery-list carousel-inner">
             <li class="item carousel-item active">
                 
@@ -30,7 +30,7 @@
                 <img class="gallery-img d-block w-100" src="./images/mobile/gallery/lady2@2x.png" alt="visitor's photo" width="85" height="85" vspace="15"/>
                 <div class="text-wrap carousel-caption d-none d-md-block">
                     <p class="gallery-text">
-                        <span class="icon-uniE900">&#10078</span> Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+                        Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                         Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                         ipsum primis in nibh vel risus.
                     </p>
