--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,28 +1,16 @@
-@mixin transition ($property) {
-    transition-property: $property;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-}
-
-// для увеличения картинок
-%scale_function {
-    transform: scale(1.25);
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-    transition-duration: 250ms;
-}
-
-%scale_to_div {
-    opacity: 1;
-    transform: scale(1);
-}
-
-
 // для изменения цвета :hover :focus
 @mixin transition($property) {
   transition-property: $property;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
+}
+@mixin button($bgcolor, $color, $height) {
+  padding-left: 35px;
+  padding-right: 55px;
+  border-radius: 20px;
+  background-color: $bgcolor;
+  color: $color;
+  border-style: none;
+  height: $height;
 }
