--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,8 @@
 @import './fonts';
 @import './mixins';
 @import './visually-hidden';
+@import './placeholders';
+@import './ui.totop';
 
 @import './container';
 @import './common';
