added shadow and content-text

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -20,10 +20,7 @@
                             <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                         </svg>
                     </div>
-                    <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et. dolore magna
-                        aliqua facilisis.
+                    <p class="about-ice-creame">Ice cream (derived from earlier iced cream or cream ice)is a sweetened frozen food typically eaten as a snack or dessert. It may be made from dairy milk or cream and is flavoured with a sweetener, either sugar or an alternative, such as cocoa or vanilla.
                     </p>
                     <button type="button" class="btn button">
                         <svg class="arrow-svg" width="12" height="12">
@@ -50,10 +47,7 @@
                             <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                         </svg>
                     </div>
-                    <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et. dolore magna
-                        aliqua facilisis.
+                    <p class="about-ice-creame">Iced coffee is a type of coffee drink that is served chilled, brewed in different ways, with the main section being cold brewing - making cold coffee, giving a different taste and does not require refrigeration - or brewing in normal mode (hot) and then cooling.
                     </p>
                     <button type="button" class="btn button">
                         <svg class="arrow-svg" width="12" height="12">
@@ -80,10 +74,8 @@
                             <use href="./images/icons/symbol-defs.svg#icon-ellipse"></use>
                         </svg>
                     </div>
-                    <p class="about-ice-creame">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor
-                        incididunt ut labore et. dolore magna
-                        aliqua facilisis.
+                    <p class="about-ice-creame">A milkshake, or simply shake, is a drink that is traditionally made by blending cow's milk, ice cream, and flavorings or
+                    sweeteners such as butterscotch, caramel sauce, chocolate syrup, fruit syrup, or whole fruit into a thick, sweet, cold mixture. 
                     </p>
                     <button type="button" class="btn button">
                         <svg class="arrow-svg" width="12" height="12">
