--- a/src/sass/components/products/_products.scss
+++ b/src/sass/components/products/_products.scss
@@ -150,7 +150,7 @@
   margin-bottom: 30px;
 }
 .doted-svg {
-  fill: var(--color2, #fff);
+  --color2: #fff;
 }
 .about-ice-creame {
   font-weight: bold;
@@ -181,7 +181,7 @@
   text-align: center;
   &:hover,
   &:focus {
-    background: #ecebeb;
+    box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
   }
 }
 .arrow-svg {
