Оформляет секцию benefits

--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,1 +1,102 @@
-
+.benefits {
+  padding-top: 110px;
+  padding-bottom: 110px;
+  width: 100%;
+  & h2 {
+    margin-bottom: 20px;
+  }
+  & h3 {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 25px;
+    }
+    @media screen and (min-width: 768px) {
+      margin-bottom: 50px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 55px;
+    }
+  }
+  .benefits-title {
+    text-align: center;
+    text-transform: uppercase;
+  }
+  & p {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.85;
+  }
+}
+.benefits-description {
+  & p {
+    margin-top: 45px;
+    margin-bottom: 30px;
+    padding-left: 45px;
+    padding-right: 45px;
+    font-style: normal;
+  }
+  & .special p {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    color: $contacts-color;
+  }
+}
+.benefits-description {
+  padding-bottom: 15px;
+  & img {
+    @media screen and (min-width: 768px) {
+      width: 50%;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-evenly;
+    width: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: url(../images/splashing_milk@2x.jpg);
+    z-index: -1;
+    background-size: cover;
+    width: auto;
+  }
+}
+.special {
+  @media screen and (max-width: 767px) {
+    background-image: url(../images/splashing_milk.jpg);
+    z-index: -1;
+    background-size: cover;
+    width: auto;
+  }
+}
+.benefits-list {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    width: auto;
+  }
+  & li {
+    padding-top: 30px;
+    // @media screen and (min-width: 1200px) {
+    //     width: calc((100% - 6 * 5px) / 3);
+    //     // margin: 15px;
+    //     }
+    & p {
+      padding-right: 100px;
+    }
+  }
+  & h3 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+.read-more {
+  margin-left: 45px;
+  height: 44px;
+  width: 175px;
+  color: $accent-color;
+  border-radius: 22px;
+  border-color: $primary-text-color;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
+  &:hover,
+  &:focus {
+    border-color: $accent-color;
+  }
+}
