Add BG from reviews in traditions

--- a/src/sass/components/reviews/_reviews-bg-photo.scss
+++ b/src/sass/components/reviews/_reviews-bg-photo.scss
@@ -1,22 +1,25 @@
 .reviews-bg-photo {
+  position: absolute;
+  bottom: 0;
   padding: 0;
   min-width: 320px;
-  height: 100%;
+  // height: 100%;
   min-height: 122px;
-  background-color: $main-white-color;
-  background-image: url('../images/reviews-bg-photo/reviews-bg-photo-mobile.jpg');
+  background-image: url('../images/reviews-bg-photo/reviews-bg-photo-mobile.png');
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
 
+  transform: translateY(50%);
+
   @media screen and (min-width: $tablet) {
     min-width: $tablet;
     height: 430px;
-    background-image: url('../images/reviews-bg-photo/reviews-bg-photo-tablet@1x.jpg');
+    background-image: url('../images/reviews-bg-photo/reviews-bg-photo-tablet.png');
   }
 
   @media screen and (min-width: $desktop) {
     min-width: $desktop;
-    background-image: url('../images/reviews-bg-photo/reviews-bg-photo-desktop@1x.jpg');
+    background-image: url('../images/reviews-bg-photo/reviews-bg-photo-desktop.png');
   }
 }
