--- a/src/sass/components/reviews/_reviews.scss
+++ b/src/sass/components/reviews/_reviews.scss
@@ -1,15 +1,15 @@
 .reviews {
-  padding-top: 80px;
+  padding-top: 140px;
   padding-bottom: 80px;
   background-color: $main-white-color;
 
   @media screen and (min-width: $tablet) {
-    padding-top: 120px;
+    padding-top: 210px;
     padding-bottom: 120px;
   }
 
   @media screen and (min-width: $desktop) {
-    padding-top: 125px;
+    padding-top: 280px;
     padding-bottom: 125px;
   }
 }
@@ -84,4 +84,49 @@
   line-height: 1.86;
 
   text-align: center;
+}
+
+.slider {
+  position: relative;
+}
+
+.slider .slick-arrow {
+  position: absolute;
+  top: 50%;
+  z-index: 3;
+  font-size: 0;
+}
+
+.slider .slick-arrow.slick-prev {
+  left: -35px;
+  @media screen and (min-width: $tablet) {
+    width: 50px;
+    height: 50px;
+    background-image: url('../images/reviews/prev.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100%;
+    background-color: transparent;
+  }
+}
+
+.slider .slick-arrow.slick-prev::before {
+  content: '';
+}
+
+.slider .slick-arrow.slick-next {
+  right: -35px;
+  @media screen and (min-width: $tablet) {
+    width: 50px;
+    height: 50px;
+    background-image: url('../images/reviews/next.svg');
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: 100%;
+    background-color: transparent;
+  }
+}
+
+.slider .slick-arrow.slick-next::before {
+  content: '';
 }
