--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -16,6 +16,32 @@
 
 }
 
+.products-container {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    outline: 1px solid tomato;
+    width: 320px;
+
+    @media screen and (min-width: 320px) {
+       margin-right: auto;
+       margin-left: auto;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        padding-left: 34px;
+        padding-right: 34px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 1280px;
+        padding-left: 115px;
+        padding-right: 115px;
+    }
+}
+
 
 .products-secondary-title  {
     font-family: Titan One;
@@ -79,7 +105,7 @@
     margin-bottom: 30px;
 
     @media screen and (min-width: 1280px) {
-        margin-bottom: 32px;
+        margin-bottom: 27px;
     }
 }
 
@@ -90,12 +116,11 @@
     font-size: 14px;
     line-height: 1.5;
     text-align: center;
-    letter-spacing: 4px;
+    // letter-spacing: 4px;
     color: $color-text-white;
     margin-bottom: 30px;
     margin-left: 40px;
     margin-right: 40px;
-
     width: 200px;
     height: 124px;
     overflow: hidden;
@@ -105,11 +130,12 @@
         height: 124px;
         margin-left: 11px;
         margin-right: 11px;
+         margin-bottom: 40px;
     }
     @media screen and (min-width: 1280px) {
         margin-left: 44px;
         margin-right: 44px;
-        margin-bottom: 62px;
+        margin-bottom: 60px;
         width: 241px;
         height: 106px;
     }
@@ -149,8 +175,8 @@
     }
 
     @media screen and (min-width: 1280px) {
-        padding-bottom: 60px;
-        padding-top: 163px;
+        padding-bottom: 50px;
+        padding-top: 187px;
     }
 }
 
@@ -253,12 +279,16 @@
     height: 6px;
     margin-bottom: 30px;
 
-    @media screen and (min-width: 1200px) {
-    margin-bottom: 32px;
+    @media screen and (min-width: 1280px) {
+    margin-bottom: 27px;
 }
 }
 
 .dots-icon {
     margin-right: 4px
 }
+
+
+
+
 
