changed indents in the product card

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -21,7 +21,7 @@
     padding-right: 20px;
     margin-right: auto;
     margin-left: auto;
-    outline: 1px solid tomato;
+    // outline: 1px solid tomato;
     width: 320px;
 
     @media screen and (min-width: 320px) {
