--- a/src/sass/components/_description.scss
+++ b/src/sass/components/_description.scss
@@ -1,7 +1,7 @@
 .section-description {
   background-color: rgb(255, 255, 255);
-  margin-top: 30px;
-  margin-bottom: 50px;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
 
 .description-icons {
@@ -30,7 +30,7 @@
     padding-right: 15px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .description-container-style {
     display: flex;
   }
@@ -46,8 +46,8 @@
     line-height: 164.9%;
   }
   .section-description {
-    margin-top: 100px;
-    margin-bottom: 130px;
+    padding-top: 100px;
+    padding-bottom: 130px;
   }
 }
 .square {
