--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -12,6 +12,7 @@
     margin: 0 4px;
   }
 }
+
 .logo-footer-p {
   font-weight: bold;
   font-size: 8px;
@@ -32,14 +33,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
+  padding-top: 30px;
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin-top: 40px;
+    padding-top: 40px;
     @media screen and (min-width: 1344px) {
-      margin-top: 55px;
+      padding-top: 55px;
     }
   }
 }
@@ -47,6 +48,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  animation: bounce; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
+}
+.animate__animated.animate__bounce {
+  --animate-duration: 2s;
 }
 .footer-tel-style {
   display: flex;
