--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,11 @@
 <section class="hero">
     <div class="hero-container">
         <div class="hero-main-info">
-          <h1 class="hero-title">ice cream<br>made with<br><span class="hero-passion">passion</span></h1>
+          <h1 class="hero-title">ice cream<br>made with<br>
+            <span class="hero-passion"> 
+              <span class="hero-0s">p</span><span class="hero-100ms">a</span><span class="hero-200ms">s</span><span class="hero-300ms">s</span><span class="hero-400ms">i</span><span class="hero-500ms">o</span><span class="hero-600ms">n</span>
+            </span>
+          </h1>
           <ul class="hero-buttons-list">
               <li><a class="hero-button" href="#products">Products</a></li>
               <li><a class="hero-button" href="#traditions">How it’s made?</a></li>
