--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1027,6 +1027,7 @@ html {
   font-size: 48px;
   line-height: 0.96;
   color: #d41443;
+  transition: 250ms;
 }
 
 @media screen and (min-width: 768px) {
@@ -1039,6 +1040,55 @@ html {
   .hero-passion {
     font-size: 58px;
   }
+}
+
+@keyframes title {
+  0% {
+    scale: 1;
+  }
+  50% {
+    scale: 1.5;
+  }
+}
+
+.hero-passion:hover .hero-0s {
+  animation: title 0.5s linear 1 0s alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-100ms {
+  animation: title 0.5s linear 1 100ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-200ms {
+  animation: title 0.5s linear 1 200ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-300ms {
+  animation: title 0.5s linear 1 300ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-400ms {
+  animation: title 0.5s linear 1 400ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-500ms {
+  animation: title 0.5s linear 1 500ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-600ms {
+  animation: title 0.5s linear 1 600ms alternate-reverse;
+  display: inline-block;
+}
+
+.hero-passion:hover .hero-700ms {
+  animation: title 0.5s linear 1 700ms alternate-reverse;
+  display: inline-block;
 }
 
 .hero-buttons-list {
@@ -1075,6 +1125,7 @@ html {
 .hero-buttons-list li:first-child .hero-button:hover, .hero-buttons-list li:first-child .hero-button:focus {
   transform: scale(1.1);
   background-color: #c7133e;
+  box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
 }
 
 .hero-button {
@@ -1092,7 +1143,7 @@ html {
 
 .hero-button:hover, .hero-button:focus {
   transform: scale(1.1);
-  background-color: #ecebeb;
+  box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
 }
 
 @media screen and (min-width: 1200px) {
@@ -1228,7 +1279,7 @@ html {
 .hero-arrow-button:hover .hero-icon-arrow,
 .hero-arrow-button:focus .hero-icon-arrow {
   transform: scale(1.1);
-  background-color: #ecebeb;
+  box-shadow: 0px 8px 50px rgba(210, 20, 67, 0.6);
 }
 
 @media screen and (min-width: 1200px) {
