updates button positioning

--- a/src/sass/_production.scss
+++ b/src/sass/_production.scss
@@ -174,12 +174,16 @@
     @include transition(background-color);
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width:990px) {
     margin-left: 340px;
   }
 
+  @media screen and (min-width: 991px) and (max-width:1279px) {
+    margin-left: 365px;
+  }
+
   @media screen and (min-width: 1280px) {
-    margin-left: 550px;
+    margin-left: 700px;
     margin-top: -150px;
   }
 }
