--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -1,4 +1,4 @@
-<!-- <section class="container">
+<section class="container">
   <h2 class="hidden-title">Description</h2>
   <ul class="description-list">
     <li class="item">
@@ -20,4 +20,4 @@
       <p class="description-text">Финансовая гарантия результата</p>
     </li>
   </ul>
-</section> -->
+</section>
