--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,4 +1,4 @@
-<!-- <section class="guarantee">
+<section class="guarantee">
     <div class="guarantee-container container">
         <h2 class="guarantee-title">Мы гарантируем</h2>
             <ul class="guarantee-list">
@@ -33,4 +33,4 @@
                 </li>
             </ul>
     </div>
-</section> -->
+</section>
