--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -110,6 +110,10 @@
 // Destop
 
 @media screen and (min-width: 1344px) {
+  h2 {
+    animation: pulse;
+    animation-duration: 2s;
+  }
   .problems {
     padding-top: 100px;
     height: 560px;
@@ -127,6 +131,8 @@
       padding-right: 112px;
       max-width: 1314px;
       height: 362px;
+      animation: pulse;
+      animation-duration: 2s;
     }
 
     &__list {
@@ -167,7 +173,6 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      overflow: hidden;
     }
     &__img {
       display: block;
