--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -35,6 +35,8 @@
     counter-reset: section;
     background: var(--white-color);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+    animation: pulse;
+    animation-duration: 2s;
   }
 
   &__item::before {
@@ -94,7 +96,6 @@
     margin-bottom: 24px;
   }
 }
-
 
 // Desktop
 
