--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,104 @@ header .btn {
   color: #d41443;
 }
 
+.hero {
+  display: block;
+  height: 502px;
+  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 65% 51.5%, #ffa5ba 172px, #ffb8ca 172px);
+  background-size: 171px, cover;
+  background-repeat: no-repeat;
+  background-position: left 63% bottom 0, left 0 top 0;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 399px;
+    background-image: url(../images/hero/tab-icecream.png), radial-gradient(circle farthest-side at 61% 52%, #ffa5ba 161px, #ffb8ca 161px);
+    background-size: 143px, cover;
+    background-position: left 58.5% bottom 0, left 0 top 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 665px;
+    background-image: url(../images/hero/desktop-icecream.png), radial-gradient(circle farthest-side at 66% 53.5%, #ffa5ba 269px, #ffb8ca 269px);
+    background-size: 236px, cover;
+    background-position: left 56% bottom 0, left 0 top 0;
+  }
+}
+
+.hero-titul {
+  width: 220px;
+  margin-top: 193px;
+  font-family: Titan One;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-titul {
+    margin-top: 102px;
+    font-size: 22px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-titul {
+    margin-top: 171px;
+    width: 280px;
+    font-size: 38px;
+    line-height: 1.16;
+  }
+}
+
+.hero-tityl-one {
+  font-size: 48px;
+  line-height: 0.96;
+  color: #d41443;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-tityl-one {
+    font-size: 34px;
+    line-height: 0.91;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-tityl-one {
+    font-size: 58px;
+    line-height: 0.9;
+  }
+}
+
+.hero-btn {
+  height: 24px;
+  margin-top: 19px;
+  padding: 0 14px;
+  border-radius: 20px;
+  /*шрифты*/
+  font-family: DM Sans;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+}
+
+.hero-btn:last-child {
+  margin-left: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-btn {
+    margin-top: 20px;
+  }
+}
+
 .review {
   width: 320px;
   padding-top: 80px;
