--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,18 +1,25 @@
-<div class="dont-worry">
-  <button class="btn appeal-one">
-    <span>Our Locations</span>
-    <!-- <svg>
-      <use href="./images/svg/sprite.svg#icon-arrow"></use>
-    </svg> -->
-  </button>
-  <button class="btn appeal-two">
-    Our Locations
-    <!-- <svg>
-      <use href="./images/svg/sprite.svg#icon-arrow"></use>
-    </svg> -->
-  </button>
-</div>
-
-<section>
-  <div class="container"></div>
+<section class="hero">
+  <div class="container">
+    <h1 class="hero-titul">
+      ice cream made with <span class="hero-tityl-one">passion</span>
+    </h1>
+    <button class="hero-btn appeal-one">Products</button>
+    <button class="hero-btn appeal-two">How it’s made?</button>
+    <!-- вывести в отдельный блок -->
+    <div class="dont-worry">
+      <button class="btn appeal-one">
+        <span>Our Locations</span>
+        <!-- <svg>
+              <use href="./images/svg/sprite.svg#icon-arrow"></use>
+            </svg> -->
+      </button>
+      <button class="btn appeal-two">
+        Our Locations
+        <!-- <svg>
+              <use href="./images/svg/sprite.svg#icon-arrow"></use>
+            </svg> -->
+      </button>
+    </div>
+    <!-- вывести в отдельный блок -->
+  </div>
 </section>
