--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -131,7 +131,6 @@
     align-items: center;
     letter-spacing: 0.08em;
     color: #111518;
-    padding-right: 20px;
 }
 .hero-advantages-item{
       display: flex;
@@ -154,6 +153,8 @@
         flex-direction: row;
         align-items: baseline;
         margin-left: 0;
+        justify-content: space-between;
+        
     }
     .hero{
         padding-top: 70px;
