--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -1,7 +1,20 @@
-.choose{
+.choose-title{
+margin-bottom: 30px;
+font-family: Montserrat;
+font-style: normal;
+font-weight: 800;
+font-size: 20px;
+line-height: 136%;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
+.choose-conteiner{
+    counter-reset: section;
     width: 280px;
     padding-top: 20px;
     padding-bottom: 20px;
+    padding-left: 30px;
+    padding-right: 14px;
     background: #FFFFFF;
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -16,7 +29,7 @@ color: #111518;
 position: relative;
 }
 
-.choose-list-item .accent-line::before{
+.choose-list-item .accent-line-choose::before{
     content: "";
     display: block;
     background-color:#FF6B09;
@@ -25,7 +38,7 @@ position: relative;
     color:#FF6B09;
     margin-bottom: 20px;
 }
-.choose-list-item .accent-line::after{
+.choose-list-item .accent-line-choose::after{
     content: counter(section,decimal-leading-zero);
     counter-increment: section;
     position: absolute;
@@ -43,7 +56,12 @@ position: relative;
     }
 }
 @media screen and (min-width:768px)  and (max-width:1343px){
-    .choose{
+    .choose-title{
+    text-align: center;
+    font-size: 26px;
+    line-height: 130%;
+    }
+    .choose-conteiner{
         width: 688px;
         padding-top: 30px;
         padding-bottom: 30px;
@@ -64,9 +82,16 @@ position: relative;
     }
 }
 @media screen and (min-width: 1344px){
-    .choose{
+    .choose-title{
+        display: none;
+    }
+    .choose-item-title{
+    font-size: 20px;
+    line-height: 1.4;
+    }
+    .choose-conteiner{
+    padding: 70px 84px;
     width: 1314px;
-    padding: 70px 80px;
     }
     .choose-list{
     display:flex;
