делаем правильный комит

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,150 +1,155 @@
 // FOOTER
 .footer-light {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
-.footer .logo {
-  display: inline-block;
-  margin-bottom: 20px;
+.footer-logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-bottom: 20px;
 }
+
+.footer-tel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 29.79px;
+    
+    &:hover .footer-tel-number {
+        color: var(--accent-color);
+    }
+    &:hover .footer-tel-icon {
+        transform: rotate(-42deg);
+    }
+}
+
 .footer-tel-icon {
-  margin-right: 10px;
-  fill: var(--accent-color);
-  transition: transform 300ms var(--transition-function);
+    margin-right: 10px;
+    fill: var(--accent-color);
+    transition: transform var(--transition-function);
 }
 
 .footer-tel-number {
-  position: relative;
-  display: block;
+    position: relative;   
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.08em;
+    
+    color: var(--primary-text-color);
+} 
 
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.214;
-  letter-spacing: 0.08em;
-
-  color: var(--primary-text-color);
-}
-.footer-tel {
-  display: flex;
-  align-items: center;
-  margin-bottom: 29.79px;
-
-  &:hover .footer-tel-number {
-    color: var(--accent-color);
-  }
-  &:hover .footer-tel-icon {
-    transform: rotate(-42deg);
-  }
-}
 .footer-instagram {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: auto;
-  margin-left: auto;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .footer-dark {
-  text-align: center;
-  padding-top: 21px;
-  padding-bottom: 21px;
-  background-color: var(--dark-bg-color);
+    text-align: center;
+    padding-top: 21px;
+    padding-bottom: 21px; 
+    background-color: var(--dark-bg-color);   
 }
 .footer-copyrights {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 2;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 2;
 
-  color: var(--secondary-text-color);
+    color: var(--secondary-text-color); 
 }
 // TABLET
-@media screen and (min-width: 768px) {
-  .footer-box {
-    display: flex;
-    justify-content: center;
-  }
-  .footer-copyrights {
-    text-align: start;
-  }
-  .footer-light {
-    padding-top: 40px;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .footer .logo {
-    width: 125px;
-    margin-bottom: 0;
-    display: block;
-  }
-
-  .footer-instagram {
-    position: relative;
-    margin-left: 48px;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 10%;
-      left: -50%;
-      height: 40px;
-      width: 1px;
-      background-color: var(--secondary-text-color);
+ @media screen and (min-width: 768px) {
+    .footer-light {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        display: flex;
+    } 
+    .footer-logo {
+    justify-content: start;    
     }
-  }
+    
+    .footer-contacts {
+         display: flex;
+     }
 
-  .footer-tel-number {
-    margin-left: auto;
-    margin-bottom: 0;
+    .footer-instagram {
+        position: relative;
+        margin-left: 48px;
+    
+        &::before {
+        content: "";
+        position: absolute;
+        top: 10%;
+        left: -50%;
+        height: 40px;
+        width: 1px;
+        background-color: var(--secondary-text-color);
+        }
+    }
 
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.08em;
-  }
+    .footer-tel-number {
+        margin-left: auto;
+        margin-bottom: 0;
+       
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.08em;
+    }
 
-  .footer-tel-icon {
-    width: 24px;
-    height: 23.06px;
-  }
-  .footer-tel {
-    margin-bottom: 0;
-  }
+    .footer-tel-icon {
+        width: 24px;
+        height: 23.06px;
+    }
+
+    .footer-copyrights {
+        text-align: start;
+    }
+    }
+    
+@media screen and (min-width: 768px) and (max-width: 1343px) {
+    .footer-light {
+        justify-content: space-between;
+    }
+    .footer-logo {
+        margin-right: 0;
+    }
 }
 // DESKTOP
-@media screen and (min-width: 1344px) {
-  .footer-box {
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .footer-light {
-    justify-content: center;
-    text-align: center;
-    padding-top: 56px;
-    padding-bottom: 55px;
-    padding-left: 0;
-  }
-  .footer .logo {
-    align-items: start;
-  }
-  .footer-instagram {
-    margin-right: auto;
-    margin-left: 40px;
-  }
-  .footer-tel-number {
-    margin: 0;
-    font-size: 30px;
-    line-height: 1.23;
+    @media screen and (min-width: 1344px) {
 
-    text-align: center;
-  }
-  .footer-tel-icon {
-    width: 30px;
-    height: 28.82px;
-  }
-}
+        .footer-light {
+           text-align: center;
+            padding-top: 56px;
+            padding-bottom: 55px;
+            padding-left: 0;
+        } 
+        .footer .logo {
+            align-items: start;
+            margin-right: 290px;
+        }
+        .footer-instagram {
+            margin-right: auto;
+            margin-left: 40px;
+        }
+        .footer-tel-number {
+            margin: 0;
+            font-size: 30px;
+            line-height: 1.23;
+            
+            text-align: center;
+        }
+        .footer-tel-icon {
+            width: 30px;
+            height: 28.82px;
+        }
+       
+    }
