--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,6 +1,15 @@
 .section__program {
   background-color: #111518;
-  padding-top: 60px;
+  overflow: hidden;
+  @media screen and (min-width: 320px) {
+    padding-top: 50px;
+    padding-bottom: 537px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 50px;
+  }
   @media screen and (min-width: 1344px) {
     padding-top: 120px;
     padding-bottom: 363px;
@@ -74,9 +83,10 @@
     left: -51px;
   }
   @media screen and (min-width: 1344px) {
-    width: 105%;
+    width: 100%;
     height: 1px;
     top: 280px;
+    left: 0;
   }
 }
 
@@ -222,9 +232,9 @@
     background-repeat: no-repeat;
 
     margin-left: auto;
-    position: relative;
-    bottom: 95px;
-    right: -20px;
+    position: absolute;
+    bottom: -90px;
+    right: 0px;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
@@ -266,7 +276,7 @@
     margin-left: 0;
     position: absolute;
     left: -180px;
-    bottom: 80px;
+    bottom: 85px;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
