--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -72,7 +72,6 @@
     .footer-flex-container{
         display: flex;
         align-items: baseline;
-        margin: 0px;
         width: auto;
         height: 125px;
     }
@@ -93,8 +92,9 @@
         font-size: 18px;
         line-height: 1.2px;
         display: table-cell;
-        vertical-align: middle
+        vertical-align: middle;
     }
+
 
     .footer-line{
         margin-right: 24px;
@@ -128,12 +128,9 @@
     }
 
     .footer-icon-tel{
-        margin-left: 355px;
-    }
-
-    .footer-icon-tel{
         width: 30px; 
         height: 28px;
+        margin-left: 355px;
     }
 
     .footer-number{
