--- a/src/sass/layout/_main_problems.scss
+++ b/src/sass/layout/_main_problems.scss
@@ -145,7 +145,7 @@
       padding-left: 100px;
     }
     &:nth-child(4) {
-      padding-left: 76px;
+      padding-left: 64px;
     }
     &:nth-child(6) {
       padding-left: 120px;
@@ -155,21 +155,13 @@
 
 @media screen and (min-width: 1344px) {
   .main_problems {
+    position: relative;
     width: 100%;
-    margin-bottom: 120px;
-    background-color: var(--black-color);
+    height: 449px;
+    margin-bottom: 170px;
   }
 
-  .main_problems__black {
-    width: 1680px;
-    height: 560px;
-  }
   .main_problems__title {
-    width: 866px;
-    height: 178px;
-    padding-bottom: 100px;
-    // padding-left: 183px;
-    // padding-right: 631px;
     font-weight: 800;
     font-size: 46px;
     line-height: 1.3;
@@ -179,37 +171,85 @@
 
   .main_problems__img {
     position: absolute;
-    top: 11px;
-    right: 16px;
+    top: 100px;
+    right: -130px;
     display: block;
   }
+
   .main_problems__list {
-    position: absolute;
-    top: 55%;
-    left: 39%;
-    transform: translateX(-50%);
-    margin-top: 50px;
-    width: 1314px;
-    height: 380px;
+    margin-top: 150px;
+    width: 1323px;
+    height: 362px;
+    // padding-top: 70px;
+    // padding-bottom: 62px;
   }
+
   .main_problems__item {
-    padding-bottom: 20px;
+    flex-basis: calc((100% - 2 * 40px) / 3);
+    // padding-bottom: 20px;
   }
-  .main_problems__list ul {
-    padding-top: 85px;
-  }
-  .main_problems__list li {
+
+  .main_problems__list .main_problems__item-number {
+    display: flex;
+    flex-wrap: wrap;
+    font-weight: bold;
     font-size: 20px;
+    line-height: 1.649;
+    align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--orange-color);
+    margin-bottom: 10px;
+
+    &::after {
+      position: absolute;
+      top: 14px;
+      left: -1px;
+      content: '';
+      display: inline-block;
+      width: 15px;
+      height: 2px;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.649;
+      letter-spacing: 0.08em;
+      background-color: var(--orange-color);
+      margin-bottom: 20px;
+    }
   }
+
+  .main_problems__list .main_problems__list-item {
+    padding-top: 70px;
+    padding-bottom: 62px;
+  }
+
+  .main_problems__list .main_problems__item-desc {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 1.2;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.08em;
+    color: var(--black-color);
+  }
+
   .main_problems__item {
+    &:nth-child(1) {
+      padding-left: 55px;
+    }
+    &:nth-child(2) {
+      padding-left: 55px;
+    }
+    &:nth-child(3) {
+      padding-left: 55px;
+    }
     &:nth-child(4) {
       padding-left: 55px;
     }
     &:nth-child(5) {
-      padding-left: 85px;
+      padding-left: 55px;
     }
     &:nth-child(6) {
-      padding-left: 110px;
+      padding-left: 55px;
     }
   }
 }
