--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -1,44 +1,101 @@
-<section class="description how-its-made">
-    <div class="container">
-        <h3 class="subtitle">tradition and love</h3>
-        <h2 class="title">how it’s made?</h2>
-        <div class="cow-container">
-            <img width="516" height="516" src="#" alt="cow" />
-            <div class="cow-text-content">
-                <p>
-                    Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
-                    cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
-                    justo fringilla.
-                </p>
-                <p>
-                    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
-                    Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
-                    suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
-                    tincidunt.
-                    <span>Aliquam erat volutpat. Aenean accumsan.</span>
-                </p>
-                <button type="button" class="button">Read more</button>
-            </div>
-            <ul class="fact-list">
-                <li class="fact">
-                    <img width="33" height="55" src="#" alt="icon1" />
-                    <p>721</p>
-                    <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                </li>
-                <li class="fact">
-                    <img width="30" height="50" src="#" alt="icon2" />
-                    <p>16kg</p>
-                    <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                </li>
-                <li class="fact">
-                    <img width="44" height="50" src="#" alt="icon3" />
-                    <p>84</p>
-                    <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-                </li>
-            </ul>
+<section class="section">
+  <div class="how-its-made container">
+    <div>
+      <h3 class="subtitle">tradition and love</h3>
+      <h2 class="title">how it’s made?</h2>
+      <div class="cow-container">
+        <picture>
+          <source
+            srcset="
+              ./images/how-its-made/desktop-cow.png    1x,
+              ./images/how-its-made/desktop-cow@2x.png 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ./images/how-its-made/tab-cow.png    1x,
+              ./images/how-its-made/tab-cow@2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              ./images/how-its-made/mob-cow.png    1x,
+              ./images/how-its-made/mob-cow@2x.png 2x
+            "
+            media="(min-width: 280px)"
+          />
+          <img src="./images/how-its-made/mob-cow.png" alt="cow" />
+        </picture>
+        <div class="cow-text-content">
+          <ul cow-text-content-list>
+            <li class="cow-text-content-list-item primary-text">
+              Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
+              justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
+              erat at justo fringilla.
+            </li>
+            <li class="cow-text-content-list-item secondary-text">
+              Curabitur lacinia enim at ex blandit, vel pellentesque odio
+              elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
+              euismod nisl suscipit ligula volutpat, a feugiat urna maximus.
+              Cras massa nibh, tincidunt.
+            </li>
+            <li class="cow-text-content-list-item secondary-text">
+              Aliquam erat volutpat. Aenean accumsan.
+            </li>
+          </ul>
+          <button type="button" class="button">Read more</button>
         </div>
+      </div>
+      <ul class="fact-list">
+        <li class="fact">
+          <p class="fact-title fact-title1">721</p>
+          <p class="fact-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+        <li class="fact">
+          <p class="fact-title fact-title2">16kg</p>
+          <p class="fact-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+        <li class="fact">
+          <p class="fact-title fact-title3">84</p>
+          <p class="fact-text">
+            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+          </p>
+        </li>
+      </ul>
     </div>
-    <div class="img-set-wrapper">
-        <img width="1280" height="430" src="#" alt="img-set" />
-    </div>
+  </div>
+</section>
+<section class="img-set">
+  <div class="container">
+    <picture>
+      <source
+        srcset="
+          ./images/how-its-made/desktop-img-set.jpg    1x,
+          ./images/how-its-made/desktop-img-set@2x.jpg 2x
+        "
+        media="(min-width: 1280px)"
+      />
+      <source
+        srcset="
+          ./images/how-its-made/tab-img-set.jpg    1x,
+          ./images/how-its-made/tab-img-set@2x.jpg 2x
+        "
+        media="(min-width: 768px)"
+      />
+      <source
+        srcset="
+          ./images/how-its-made/mob-img-set.jpg    1x,
+          ./images/how-its-made/mob-img-set@2x.jpg 2x
+        "
+        media="(min-width: 280px)"
+      />
+      <img src="./images/how-its-made/mob-img-set.jpg" alt="cow" />
+    </picture>
+  </div>
 </section>
