--- a/src/sass/layout/_guarantee.scss
+++ b/src/sass/layout/_guarantee.scss
@@ -1,6 +1,5 @@
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .container.mobile {
-    max-width: 320px;
     padding-left: 0px;
     padding-right: 0px;
   }
@@ -62,7 +61,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1343px) {
+@media screen and (min-width: 768px) {
   .garantee-description {
     position: relative;
     font-family: Montserrat;
