--- a/src/sass/components/_backdrop-modal.scss
+++ b/src/sass/components/_backdrop-modal.scss
@@ -1,5 +1,6 @@
 .backdrop {
   overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,11 +55,11 @@
 
   @media screen and (min-width: 1344px) {
     min-width: 500px;
-    padding: 120px 155px 120px 95px;
+    top: 5%;
+    padding: 100px 140px 100px 80px;
   }
 
   .backdrop.is-hidden & {
-    // transform: scale(0) rotateX(-180deg);
     transition: transform 750ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   }
 }
