--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,16 +1,18 @@
 @media screen and(min-width: 320px) and(max-width:767px) {
-  .hero {
-    background-image: url('../images/hero/bgline-tablet.png');
+  .hero-container {
+    background-image: url('../images/hero/bgline-mobile.png');
     background-repeat: no-repeat;
-    background-position: 40% 92%;
     background-size: cover;
+    background-position: 100% 90%;
+  }
+  .hero {
     margin-top: 50px;
     padding-bottom: 75px;
     .hero-title {
       font-style: normal;
       font-weight: 800;
       font-size: 20px;
-      line-height: 34px;
+      line-height: 1.35;
       letter-spacing: 0.03em;
     }
     .hero-text {
@@ -19,10 +21,16 @@
       font-style: normal;
       font-weight: 700;
       font-size: 14px;
-      line-height: 22px;
+      line-height: 1.57;
 
       letter-spacing: 0.08em;
       .secondary-text {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.57;
+
+        letter-spacing: 0.08em;
         color: var(--secondary-text-color);
       }
       .accent {
@@ -31,13 +39,23 @@
     }
     .hero-button {
       display: block;
-      margin-top: 30px;
+      min-width: 260px;
+
       margin-left: auto;
       margin-right: auto;
-      outline: none;
-      min-width: 260px;
+      margin-top: 30px;
+
       padding: 14px;
+
+      outline: none;
       border: none;
+
+      font-style: normal;
+      font-weight: 700;
+      font-size: 12px;
+      line-height: 15px;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
 
       color: var(--white-text-color);
       background-color: var(--accent-color);
@@ -52,14 +70,20 @@
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
   screen and (min-resolution: 192dpi) and (min-width: 320px),
   screen and (min-resolution: 2dppx) and (min-width: 320px) {
-  .hero {
-    background-image: url('../images/hero/bgline-mobile@2x.png');
-  }
+  // .hero {
+  //   background-image: url('../images/hero/bgline-mobile@2x.png');
+  // }
 }
 
 @media screen and(min-width: 767px) and(max-width: 1344px) {
+  .hero-container {
+    background-image: url('../images/hero/bgline-tablet.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100% 90%;
+  }
+
   .hero {
-    position: relative;
     display: flex;
     margin-top: 70px;
     padding-bottom: 114px;
@@ -68,8 +92,8 @@
       .hero-title {
         font-style: normal;
         font-weight: 800;
-        font-size: 23px;
-        line-height: 34px;
+        font-size: 26px;
+        line-height: 1.3;
         letter-spacing: 0.03em;
       }
       .hero-text {
@@ -78,10 +102,16 @@
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
-        line-height: 22px;
+        line-height: 1.56;
         letter-spacing: 0.1em;
 
         .secondary-text {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 1.56;
+          line-height: 22px;
+          letter-spacing: 0.1em;
+
           color: var(--secondary-text-color);
         }
         .accent {
@@ -94,46 +124,71 @@
 
         outline: none;
         min-width: 260px;
-        padding: 14px;
+        padding: 14px 0;
         border: none;
+
+        font-style: normal;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.25;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
 
         color: var(--white-text-color);
         background-color: var(--accent-color);
       }
-      background-image: url('../images/hero/bgline-tablet.png');
-      background-repeat: no-repeat;
     }
     .hero-images {
       margin-left: 50px;
     }
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
-    background-position: 100% 92%;
+    background-position: -100% 92%;
+  }
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 767px),
+    screen and (min-resolution: 192dpi) and (min-width: 767px),
+    screen and (min-resolution: 2dppx) and (min-width: 767px) {
+    .hero {
+      background-image: url('../images/hero/bgline-tablet@2x.png');
+    }
   }
 }
+
 @media screen and(min-width: 1344px ) {
+  .hero-container {
+    padding-bottom: 106px;
+    background-image: url('../images/hero/bgline-tablet.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100% 90%;
+  }
   .hero {
-    position: relative;
     display: flex;
-    margin-top: 70px;
+    padding-top: 70px;
     .hero-text-box {
       .hero-title {
         font-style: normal;
         font-weight: 800;
-        font-size: 23px;
-        line-height: 34px;
+        font-size: 58px;
+        line-height: 1.29;
+
         letter-spacing: 0.03em;
       }
       .hero-text {
-        margin-top: 30px;
+        margin-top: 24px;
 
         font-style: normal;
         font-weight: 700;
-        font-size: 14px;
-        line-height: 22px;
+        font-size: 20px;
+        line-height: 1.6;
         letter-spacing: 0.1em;
 
         .secondary-text {
+          font-style: normal;
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 1.6;
+          letter-spacing: 0.1em;
           color: var(--secondary-text-color);
         }
         .accent {
@@ -145,20 +200,31 @@
         margin-top: 30px;
 
         outline: none;
-        min-width: 260px;
-        padding: 14px;
+        min-width: 354px;
+        padding: 26px;
         border: none;
 
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.2;
+
+        letter-spacing: 0.14em;
+        text-transform: uppercase;
+
+        color: #ffffff;
         color: var(--white-text-color);
         background-color: var(--accent-color);
       }
-      background-image: url('../images/hero/bgline-tablet.png');
-      background-repeat: no-repeat;
     }
     .hero-images {
+      width: 841px;
+      height: 718px;
     }
     background-image: url('../images/hero/bgline-tablet.png');
     background-repeat: no-repeat;
-    background-position: 100% 100%;
+    background-size: contain;
+    background-position: 320% 100%;
   }
 }
