--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header container">
-  <div class="menu-close">
+<header class="header">
+  <div class="menu-close container">
     <a href="#" class="logo-link">
       <p class="logo">
         Hell<span class="logo-svg"
@@ -32,7 +32,7 @@
       <use href="./images/sprite.svg#nav-menu"></use>
     </svg>
   </div>
-  <div class="menu-open container is-hidden" data-modal>
+  <div class="menu-open menu-container is-hidden" data-modal>
     <a href="#" class="menu-logo">
       Hell<span
         ><svg class="logo-svg">
