--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -274,9 +274,9 @@
     background-repeat: no-repeat;
 
     margin-left: 0;
-    position: absolute;
-    left: -180px;
-    bottom: 85px;
+    position: relative;
+    left: -183px;
+    bottom: 213px;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
