--- a/src/partials/program-section.html
+++ b/src/partials/program-section.html
@@ -1,5 +1,5 @@
 <section class="section program-section">
-    <!-- <div class="container"> -->
+    <div class="container">
         <h2 class="title">Наша программа</h2>
     
         <ul class="list program-list">
@@ -142,7 +142,7 @@
           <img class="section-program-img" src="./images/program-section/pic-tel@1x.jpg" alt="учетильница занимаеться с сотрудниками" >
          </picture> 
    
-    <!-- </div> -->
+    </div>
     
 </section>
 
