--- a/src/sass/utils/_problems.scss
+++ b/src/sass/utils/_problems.scss
@@ -19,11 +19,12 @@ color:#FF6B09;
 }
 .section-problems{
 width: 280px; 
+bottom: -195px;
 padding-left: 30px;
-position: absolute;
 padding-top: 27px;
 padding-bottom: 27px;
-bottom: -195px;
+position: absolute;
+
 background: #FFFFFF;
 box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 }
@@ -63,6 +64,7 @@ position: relative;
     .problem-list-item:not(:last-child){
         margin-bottom: 20px;
     }
+  
 }
 
 
@@ -71,6 +73,7 @@ position: relative;
     .problems{
         height: 340px;
         padding-top: 60px;
+        margin-top: 50px;
     }
     .section-problems{
         padding-left: 96px;
@@ -98,6 +101,7 @@ position: relative;
    @media screen and (min-width:1344px){
     .problems{
         height: 560px;
+        margin-top: 130px;
         padding-top:100px;
         background-image: url(../images/problems/fire.png);
         background-repeat: no-repeat;
