--- a/src/partials/backdrop-modal.html
+++ b/src/partials/backdrop-modal.html
@@ -1,6 +1,6 @@
 <div class="backdrop is-hidden" data-modal>
   <div class="modal-window">
-    <button class="close-btn button animate" type="button">
+    <button class="close-btn animate" type="button">
       <svg class="close-btn-icon" width="17" height="17">
         <use class="close-btn-icon" href="./images/sprite.svg#close"></use>
       </svg>
@@ -21,7 +21,7 @@
           </svg>
         </span>
       </label>
-      <button type="button" class="modal-form-callback-btn button animate">
+      <button type="button" class="modal-form-callback-btn animate">
         Отправить
       </button>
     </form>
