готовність трьох версій до перевірки

--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -52,9 +52,9 @@
 					<img src="./images/how-made-img/cow-mobile.png" alt="корова">
 				</picture>
 				<div class="hw-main-content">
-					<p class="a111">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-					<p class="a222">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
-					<p class="a333">Aliquam erat volutpat. Aenean accumsan.</p>
+					<p class="hw-main-content-1">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+					<p class="hw-main-content-2">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
+					<p class="hw-main-content-3">Aliquam erat volutpat. Aenean accumsan.</p>
 					<a class="hw-btn" href="#"><span class="hw-btn-text">Read more</span></a>
 				</div>
 			</div>
