home-almost-done

--- a/src/sass/_placeholders.scss
+++ b/src/sass/_placeholders.scss
@@ -14,3 +14,14 @@
 // при состоянии hover&focus {
 //   @extend %scale_function;
 // }
+%list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+%link {
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+}
