--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -26,3 +26,13 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
+
+@mixin button($bgcolor, $color, $height) {
+    padding-left: 35px;
+    padding-right: 55px;
+    border-radius: 20px;
+    background-color: $bgcolor;
+    color: $color;
+    border-style: none;
+    height: $height;
+}
