--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,1 +1,264 @@
+body {
+  position: relative;
+}
+.page-header {
+  @media screen and (min-width: 320px) {
+    padding-top: 34.89px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+  }
+  @media screen and (min-width: 1344px) {
+    padding-top: 33px;
+  }
+}
+.logo-header {
+  @media screen and (min-width: 1344px) {
+    margin-right: 144px;
+  }
+}
+.hellen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media screen and (min-width: 320px) {
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    color: #111518;
+  }
+  @media screen and (min-width: 768px) {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.231;
+    letter-spacing: 0.04em;
+    color: #111518;
+  }
+}
+.logo-header-en {
+  margin-top: 3.76px;
+  @media screen and (min-width: 320px) {
+    font-weight: bold;
+    font-size: 7px;
+    line-height: 1.429;
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+    color: #111518;
+  }
+  @media screen and (min-width: 768px) {
+    font-weight: bold;
+    font-size: 8px;
+    line-height: 1.25;
+    letter-spacing: 0.18em;
+    text-transform: uppercase;
+    color: #111518;
+  }
+}
+.fire {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+.logo-header-p {
+  @media screen and (min-width: 768px) {
+    color: var(--accent-color);
+  }
+}
+.logo-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 40px;
+    @media screen and (min-width: 1344px) {
+      margin-top: 55px;
+    }
+  }
+}
+.header-container-style {
+  display: flex;
+  flex-direction: column;
+}
+.site__nav-item .link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 320px) {
+    color: var(--white-color);
+  }
+  @media screen and (min-width: 768px) {
+    color: var(--white-color);
+  }
+  @media screen and (min-width: 1344px) {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.214;
+    text-transform: uppercase;
+    color: var(--grey-color);
+  }
+}
+.site__nav-item:hover .link,
+.site__nav-item:focus .link {
+  color: var(--accent-color);
+}
+.site__nav {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
+    display: block;
+  }
+  @media screen and (min-width: 1344px) {
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+}
+.site__nav :not(:last-child) {
+  @media screen and (min-width: 1344px) {
+    margin-right: 40px;
+  }
+}
+.btn-consultation {
+  @media screen and (min-width: 320px) and (max-width: 1343px) {
+    min-width: 260px;
+    background-color: transparent;
+    border: 2px solid var(--accent-color);
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    padding: 14px 7px;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1344px) {
+    min-width: 336px;
+    background-color: transparent;
+    border: 2px solid var(--accent-color);
+    box-sizing: border-box;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.214;
+    letter-spacing: 0.14em;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    padding: 27px 23px 26px 24px;
+    margin-left: auto;
+  }
+}
+.btn-consultation {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: none;
+  }
+  &.menu {
+    @media screen and (min-width: 320px) {
+      display: block;
+      margin: auto;
+    }
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
+  }
+}
+.container.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu-button {
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+  z-index: 10;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-left: auto;
+    padding: 0;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
+    margin-left: 40px;
+    padding: 0;
+  }
+  @media screen and (min-width: 1344px) {
+    display: none;
+  }
+  .icon-crist {
+    display: none;
+  }
+  &.is-open .icon-crist {
+    display: block;
+    fill: var(--white-color);
+    z-index: 999;
+  }
+  &.is-open .icon-burger {
+    display: none;
+  }
+}
+.logo-header.is-open {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    color: var(--white-color);
+    z-index: 999;
+  }
+}
+.logo-header.is-open .hellen {
+  color: var(--white-color);
+  z-index: 999;
+}
+.logo-header.is-open .logo-header-en {
+  color: var(--white-color);
+  z-index: 999;
+}
 
+.menu-container {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 108.53px 20px 320.47px 20px;
+    &.is-open {
+      display: block;
+      background-color: rgba(17, 21, 24, 0.9);
+      font-weight: 800;
+      font-size: 20px;
+      line-height: 1.8;
+      color: var(--white-color);
+      z-index: 10;
+    }
+  }
+  @media screen and (min-width: 768px) and (max-width: 1343px) {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 159px 218px 687px 218px;
+    &.is-open {
+      display: block;
+      background-color: rgba(17, 21, 24, 0.9);
+      font-weight: 800;
+      font-size: 26px;
+      line-height: 1.808;
+      color: var(--white-color);
+    }
+  }
+}
